js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/fields-init-heritage-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
class
Parent
{
#
x
=
42
;
}
class
C
extends
Parent
{
f
=
something
.
#
x
}
